<resources>
    <string name="app_name">Chekak Messenger</string>
    <string name="welcomeMessage">Welcome to Chekak Messenger</string>
    <string name="create_acc_btn">Create new account</string>
    <string name="login_acc">Login existing account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="enter_name">Enter your name</string>
    <string name="login_using_exiting_account">Login using an exiting account</string>
    <string name="create_a_new_account">Create a new account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_picture">Change picture</string>
    <string name="change_status">Change status</string>
    <string name="settings_name_description">This is not your username or pin. This name will be visible to your Chekak contacts</string>
    <string name="settings_status_label">Status</string>
    <string name="settings_email_label">Email</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_new_password">Confirm password</string>
    <string name="apply_changes">Apply changes</string>
    <string name="your_current_status">Your current status</string>
    <string name="start_typing_a_status">Start typing a status</string>
    <string name="title_activity_private_chat">PrivateChatActivity</string>
    <string name="title_new_chat">New chat</string>
    <string name="search_by_name">Search by user name…</string>
</resources>
