<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.developer.timurnav.chekak.chekakmessenger.activities.MainActivity">

    <ImageView
        android:id="@+id/chat_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/welcomeMessage"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/create_acc_btn"
        android:textColor="@color/grey_100"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginExistingAccountButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/login_acc"
        android:textColor="@color/grey_100"
        android:textStyle="bold" />

</RelativeLayout>
