<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.developer.timurnav.chekak.chekakmessenger.profile.ui.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        app:cardCornerRadius="13dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_using_exiting_account"
                android:textAlignment="center"
                android:textColor="@color/grey_800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <EditText
                    android:id="@+id/loginEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey_800"
                    android:textColorHint="@color/grey_500"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/loginPasswordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginEmailField"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_800"
                    android:textColorHint="@color/grey_500"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/doLoginButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginPasswordField"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
