<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.developer.timurnav.chekak.chekakmessenger.profile.ui.ChangePasswordActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <TextView
                android:id="@+id/textViewEnterOldPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/textEditEnterOldPassword"
                android:text="@string/enter_your_old_password" />

            <EditText
                android:id="@+id/textEditEnterOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEnterOldPasswordLabel"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textViewEnterNewPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEditEnterOldPassword"
                android:layout_marginTop="24dp"
                android:labelFor="@id/textEditEnterNewPassword"
                android:text="@string/enter_your_new_password" />

            <EditText
                android:id="@+id/textEditEnterNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEnterNewPasswordLabel"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textViewConfirmNewPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEditEnterNewPassword"
                android:layout_marginTop="24dp"
                android:labelFor="@id/textEditConfirmNewPassword"
                android:text="@string/confirm_your_new_password" />

            <EditText
                android:id="@+id/textEditConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewConfirmNewPasswordLabel"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonApplyPasswordChanging"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEditConfirmNewPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/apply_changes" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
